syntax = "proto3";

package msg;

message Message {
    int64 messageId = 1;
    string body = 2;
    int32 queueId = 3;
    map<string, string> properties = 4;
}
